@startuml
' Detta är en UML fil som definerar mitt ER diagram.
' Bilden genereras sedan av programmet plantuml.

hide circle
skinparam linetype ortho
' left to right direction

entity "Image" as image {
	ImageId: number <<auto generated>>
	ImageMD5: MD5 hash
	ImageFilepath: string
}

entity "User" as user {
	UserId: number <<auto generated>>
	UserName: string
	UserFooter: string
	UserPrivilege: number
	UserRegistrationDate: date
	ImageId: number
}

user --> image

entity "Hash" as hash {
	HashId: number <<auto generated>>
	Hash: bcrypt hash
	UserId: number
}

hash --> user

entity "Board" as board {
	BoardId: number <<auto generated>>
	BoardName: string
	BoardCreationDate: date
	UserId: number
}

board --> user

entity "Thread" as thread {
	ThreadId: number <<auto generated>>
	ThreadName: string
	ThreadCreationDate: date
	ThreadStickied: boolean
	UserId: number
	BoardId: number
}

thread --> user
thread --> board

entity "Post" as post {
	PostId: number <<auto generated>>
	PostContent: string
	PostCreationDate: date
	UserId: number
	ThreadId: number
}

post --> user
post --> thread

entity "UserWatchingThread" as userwatchingthread {
	UserId: number
	ThreadId: number
}

user --> userwatchingthread
thread --> userwatchingthread

entity "UserUnreadPost" as userunreadpost {
	PostId: number
	UserId: number
}

post --> userunreadpost
user --> userunreadpost

note bottom
Add users watching threads to this to be
able to notify users of unread posts.
endnote

@enduml
